--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,7 @@ JWT_SECRET="your-super-secret-jwt-key-change-in-production"
 
 # 服务器端口
 PORT=5000
+
+# AI API 配置 (用于自动生成标签)
+AI_API_URL="https://api.gptapi.us/v1/chat/completions"
+AI_API_KEY="your-ai-api-key"
