--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
         "express": "^4.18.2",
         "express-rate-limit": "^8.2.1",
         "express-validator": "^7.3.1",
+        "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1"
     },
@@ -29,6 +30,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/express-rate-limit": "^5.1.3",
+        "@types/helmet": "^0.0.48",
         "@types/jsonwebtoken": "^9.0.5",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.10.0",
