--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,14 @@
         "db:generate": "prisma generate",
         "db:push": "prisma db push",
         "db:migrate": "prisma migrate dev",
-        "db:seed": "tsx prisma/seed.ts"
+        "db:seed": "tsx prisma/seed.ts",
+        "pretest": "cross-env DATABASE_URL=\"file:./test.db\" prisma db push --accept-data-loss",
+        "test": "cross-env NODE_ENV=test DATABASE_URL=\"file:./test.db\" node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand",
+        "test:ui": "cross-env NODE_ENV=test DATABASE_URL=\"file:./test.db\" vitest --ui"
     },
     "dependencies": {
         "@prisma/client": "^5.6.0",
+        "@types/sharp": "^0.31.1",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
@@ -23,7 +27,8 @@
         "express-validator": "^7.3.1",
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
-        "multer": "^1.4.5-lts.1"
+        "multer": "^1.4.5-lts.1",
+        "sharp": "^0.34.5"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
@@ -31,11 +36,19 @@
         "@types/express": "^4.17.21",
         "@types/express-rate-limit": "^5.1.3",
         "@types/helmet": "^0.0.48",
+        "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.5",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.10.0",
+        "@types/supertest": "^6.0.3",
+        "@vitest/ui": "^4.0.15",
+        "cross-env": "^10.1.0",
+        "jest": "^30.2.0",
         "prisma": "^5.6.0",
+        "supertest": "^7.1.4",
+        "ts-jest": "^29.4.6",
         "tsx": "^4.6.0",
-        "typescript": "^5.3.2"
+        "typescript": "^5.3.2",
+        "vitest": "^4.0.15"
     }
 }
